--- a/Yasmeen.css
+++ b/Yasmeen.css
@@ -22,10 +22,15 @@ body {
    padding-top: 60px;
 
  }
+ .title1 img{
+   padding-top: 90px;
+
+ }
  .overlay1 {
    position: relative;
    z-index: 1;
    height: 100vh;
+
  }
  .overlay1::before {
    content: "";
@@ -86,11 +91,11 @@ body {
    color: #1b5663;
    font-size: 20px ;
    font-weight :600;
-   /* border: 1px solid #0d1629; */
    background-color: transparent;
    border-radius:10px; 
    margin-bottom: 30Px;
    margin-top: 60px;
+
  }
  
  .se-button:hover {
@@ -98,25 +103,43 @@ body {
    color: #0d1629;
  }
 
- .sec-button {
-   color: #1b5663;
+ 
+ .add-button {
+   border: 1px solid #1b5663;
+   background-color: #1b5663!important ;
+   color: #0d1629;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   border-radius:10px; 
+   margin-bottom: 30Px;
+   margin-top: 60px;
+   flex-wrap: wrap;
    font-size: 20px ;
    font-weight :600;
    background-color: transparent;
-   margin-bottom: 30Px;
-   margin-top: 60px;
  }
+
+ .add-button:hover {
+   background-color: #0d1629;
+   color: #fff;
+   }
  
- .sec-button:hover {
-   background-color: #1b5663;
-   color: #0d1629;
- }
+
+.caption{
+   align-self: start;
+   }
 .titlecenter{
    display: flex;
    flex-direction: column;
    gap: 16px;
    flex-wrap: wrap;
-   justify-content: center;
+   justify-content: flex-start;
+}
+.buttons{
+   display: flex;
+   gap: 16px;
+
 }
 
  .title1 {
@@ -132,6 +155,7 @@ body {
  }
  .initial-header {
    background-image: url('https://res.cloudinary.com/dh1lgpmm4/image/upload/v1693568716/Palestine/massjid-akssa_mabg85.jpg');
+   background-color: #1b5663;
    background-size: cover;
    background-position: top;
    height: 100vh;
@@ -146,18 +170,21 @@ body {
     display: flex;
     gap: 16px;
  }
+/*  
  
- #overlay {
-    top: 0;
-    left: 0;
-    height: 100%; 
-    background-color: #1b5663;
-    display: none;
-    justify-content: center;
-    align-items: center;
- }
- 
-  
+  */
+  #overlay {
+   overflow: hidden;
+   max-height: 100svh;
+   max-width: 100vw;
+   top: 0;
+   left: 0;
+   height: 100%; 
+   display: none;
+   justify-content: center;
+   align-items: center;
+}
+
  #data-table {
     margin: 2rem auto;
     border-collapse: collapse;
@@ -237,12 +264,12 @@ body {
 
 /* Styles for the popup */
 #popup {
-   max-height: 80vh;
+   max-height: 90vh;
    overflow-y: auto; 
    height: fit-content;
    background-color: #fff;
    padding: 20px;
-   max-width: 90%;
+   max-width: 90vw;
    width: 90%;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
    border-radius: 5px;
@@ -251,6 +278,8 @@ body {
 /* Form styles */
 #data-form {
    margin-top: 20px;
+   /* max-width: 100%;
+   max-height: 100vh; */
 }
 
 .form-group {
@@ -278,4 +307,34 @@ input, select {
    margin-bottom: 15px;
    font-weight: bold;
    color: #333;
+}
+
+/* Style for the table container */
+.table-container {
+   max-width: 90% ;
+   margin: 0 auto; 
+   overflow-x: auto;
+   overflow-y: auto;
+   height: fit-content;
+   min-height: 100vh;
+}
+
+/* Style for the table */
+#data-table {
+   width: 100%; /* Make the table take the full width of the container */
+   border-collapse: collapse;
+   margin: 0; /* Remove margin to prevent unnecessary spacing */
+}
+
+/* Style for table headers (optional) */
+#data-table th {
+   background-color: #F5F5F5;
+   text-align: left;
+   padding: 0.5rem 1rem;
+}
+
+/* Style for table cells (optional) */
+#data-table td {
+   border: 1px solid #E0E0E0;
+   padding: 0.5rem 1rem;
 }
